k8sconfig/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hehe-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "clientfront.hehe"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: clientfront-service
            port:
              number: 80
  - host: "keycloak.hehe"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080
  - host: "adminfront.hehe"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: adminfront-service
            port:
              number: 80

  - host: "minio.hehe"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio-service
            port:
              number: 80
